@@ -2,7 +2,6 @@ package application;
 
 import domain.CartLineItem;
 import domain.ShoppingCart;
-import domain.Song;
 import domain.repositories.ShoppingCartRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -18,7 +17,6 @@ import sharedrmi.domain.valueobjects.AlbumId;
 
 import javax.naming.NoPermissionException;
 import java.math.BigDecimal;
-import java.rmi.RemoteException;
 import java.time.LocalDate;
 import java.util.*;
 
@@ -35,7 +33,7 @@ public class ShoppingCartServiceTest {
     private static ShoppingCartRepository shoppingCartRepository;
 
     @BeforeEach
-    void initMockAndService() throws RemoteException {
+    void initMockAndService() {
         String ownerId = UUID.randomUUID().toString();
 
         List<CartLineItem> lineItems = new LinkedList<>();
@@ -49,11 +47,11 @@ public class ShoppingCartServiceTest {
     }
 
     @Test
-    void when_displayCart_return_correct_dto() throws RemoteException, NoPermissionException {
-        //when
+    void when_displayCart_return_correct_dto() throws NoPermissionException {
+        // when
         ShoppingCartDTO cartDTO = shoppingCartService.getCart();
 
-        //then
+        // then
         assertEquals(givenCart.getOwnerId(), cartDTO.getOwnerId());
         assertAll("LineItem 1",
                 () -> assertEquals(givenCart.getCartLineItems().get(0).getName(), cartDTO.getCartLineItems().get(0).getName()),
@@ -70,15 +68,48 @@ public class ShoppingCartServiceTest {
     }
 
     @Test
-    void given_album_when_addProduct_return_new_entry() throws RemoteException, NoPermissionException {
-        //given
+    void given_albumAndQuantity_when_addAlbumsToCart_return_new_entry() throws NoPermissionException {
+        // given
         int quantity = 2;
-        AlbumDTO album = new AlbumDTO("TestAlbum", "", BigDecimal.TEN, 10, MediumType.CD, LocalDate.now().toString(), new AlbumId(), "TestLabel", null, 0, 1);
+        AlbumDTO album = new AlbumDTO(
+                "TestAlbum",
+                "",
+                BigDecimal.TEN,
+                10,
+                MediumType.CD,
+                LocalDate.now().toString(),
+                new AlbumId(),
+                "TestLabel",
+                Set.of(new SongDTO(
+                        "TestSong",
+                        BigDecimal.TEN,
+                        10,
+                        MediumType.DIGITAL,
+                        LocalDate.now().toString(),
+                        "TestGenre",
+                        List.of(new ArtistDTO("TestArtist")),
+                        Set.of(new AlbumDTO(
+                                "TestAlbum",
+                                "",
+                                BigDecimal.TEN,
+                                10,
+                                MediumType.CD,
+                                LocalDate.now().toString(),
+                                new AlbumId(),
+                                "TestLabel",
+                                Collections.emptySet(),
+                                0,
+                                1
+                        )),
+                        1
+                )),
+                0,
+                1);
 
-        //when
+        // when
         shoppingCartService.addAlbumsToCart(album, quantity);
 
-        //then
+        // then
         ShoppingCartDTO cartDTO = shoppingCartService.getCart();
         assertEquals(givenCart.getOwnerId(), cartDTO.getOwnerId());
         assertAll("LineItem 3",
@@ -90,8 +121,8 @@ public class ShoppingCartServiceTest {
     }
 
     @Test
-    void given_songs_when_addSongs_return_new_entry() throws RemoteException, NoPermissionException {
-        //given
+    void given_songsWithInAlbum_when_addSongsToCart_return_new_entry() throws NoPermissionException {
+        // given
         List<SongDTO> songs = new LinkedList<>();
         songs.add(SongDTO.builder()
                 .title("TestSong1")
@@ -100,14 +131,19 @@ public class ShoppingCartServiceTest {
                 .mediumType(MediumType.DIGITAL)
                 .releaseDate(LocalDate.now().toString())
                 .genre("TestGenre")
-                .inAlbum(Collections.emptySet())
-                .artists(new LinkedList<>())
+                .inAlbum(Set.of(AlbumDTO.builder()
+                        .title("TestAlbum")
+                        .imageUrl("TestUrl")
+                        .build()))
+                .artists(List.of(ArtistDTO.builder()
+                        .name("TestArtist")
+                        .build()))
                 .build());
 
-        //when
+        // when
         shoppingCartService.addSongsToCart(songs);
 
-        //then
+        // then
         ShoppingCartDTO cartDTO = shoppingCartService.getCart();
         assertEquals(givenCart.getOwnerId(), cartDTO.getOwnerId());
         assertAll("LineItem 3",
@@ -119,41 +155,86 @@ public class ShoppingCartServiceTest {
     }
 
     @Test
-    void given_newQuantity_when_changeQuantity_return_new_quantity() throws RemoteException, NoPermissionException {
-        //given
+    void given_songsWithoutInAlbum_when_addSongsToCart_return_new_entry() throws NoPermissionException {
+        // given
+        List<SongDTO> songs = new LinkedList<>();
+        songs.add(SongDTO.builder()
+                .title("TestSong1")
+                .price(BigDecimal.TEN)
+                .stock(-1)
+                .mediumType(MediumType.DIGITAL)
+                .releaseDate(LocalDate.now().toString())
+                .genre("TestGenre")
+                .inAlbum(Collections.emptySet())
+                .artists(List.of(ArtistDTO.builder()
+                        .name("TestArtist")
+                        .build()))
+                .build());
+
+        // when
+        shoppingCartService.addSongsToCart(songs);
+
+        // then
+        ShoppingCartDTO cartDTO = shoppingCartService.getCart();
+        assertEquals(givenCart.getOwnerId(), cartDTO.getOwnerId());
+        assertAll("LineItem 3",
+                () -> assertEquals(songs.get(0).getTitle(), cartDTO.getCartLineItems().get(2).getName()),
+                () -> assertEquals(1, cartDTO.getCartLineItems().get(2).getQuantity()),
+                () -> assertEquals(songs.get(0).getPrice(), cartDTO.getCartLineItems().get(2).getPrice()),
+                () -> assertEquals(songs.get(0).getMediumType(), cartDTO.getCartLineItems().get(2).getMediumType())
+        );
+    }
+
+    @Test
+    void given_newQuantity_when_changeQuantity_return_new_quantity() throws NoPermissionException {
+        // given
         int newQuantity = 10;
 
         CartLineItemDTO lineItemDTO = new CartLineItemDTO(MediumType.CD, "24K Magic", 12, BigDecimal.valueOf(18), 5, "", ProductType.ALBUM, 1);
 
-        //when
+        // when
         shoppingCartService.changeQuantity(lineItemDTO, newQuantity);
 
-        //then
+        // then
         assertEquals(newQuantity, shoppingCartService.getCart().getCartLineItems().get(0).getQuantity());
     }
 
     @Test
-    void given_cart_when_removeProductFromCart_return_new_size() throws RemoteException, NoPermissionException {
-        //given
+    void given_cart_when_removeProductFromCart_return_new_size() throws NoPermissionException {
+        // given
         int expected = 1;
         CartLineItemDTO lineItemDTO = new CartLineItemDTO(MediumType.CD, "24K Magic", 12, BigDecimal.valueOf(18), 5, "", ProductType.ALBUM, 1);
 
-        //when
+        // when
         shoppingCartService.removeLineItemFromCart(lineItemDTO);
 
-        //then
+        // then
         assertEquals(expected, shoppingCartService.getCart().getCartLineItems().size());
     }
 
     @Test
-    void given_cart_when_clearCart_return_empty_cart() throws RemoteException, NoPermissionException {
-        //given
+    void given_cart_when_clearCart_return_empty_cart() throws NoPermissionException {
+        // given
         int expected = 0;
 
-        //when
+        // when
         shoppingCartService.clearCart();
 
-        //then
+        // then
         assertEquals(expected, shoppingCartService.getCart().getCartLineItems().size());
+    }
+
+    @Test
+    void given_ownerId_when_buyShoppingCart_then_() {
+        // TODO: implement
+
+        // given
+
+
+        // when
+
+
+        // then
+
     }
 }
